# montake-renderer

./: CMakeLists.txt  README.md
Header/: camera.h  draw.h  image.h  ray.h  texture.h  typename.h  vec.h
Photo/: earth.ppm
RunHere/: CMakeCache.txt  Makefile  cmake_install.cmake  run.sh
RunHere/Source/: Makefile  a.out  cmake_install.cmake
Source/: CMakeLists.txt  camera.cpp  draw.cpp  hit.cpp  image.cpp  makepictures.cpp  rand.cpp  ray.cpp  shapes.cpp  sky.cpp  texture.cpp  vec.cpp
include/: camera.h  draw.h  enum.h  hit.h  image.h  rand.h  ray.h  shapes.h  sky.h
src/: CMakeLists.txt  camera.cpp  draw.cpp  hit.cpp  image.cpp  main.cpp  makepictures.cpp  rand.cpp  ray.cpp  shapes.cpp  texture.cpp  vec.cpp
tools/: tools.cpp
